--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -17,6 +17,6 @@
 <fragment
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/main_frame"
-    android:name="com.heyanle.easybangumi.tv.MainFragment"
+    android:name="com.heyanle.easybangumi.tv.TvMainFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent" />
