--- a/app/src/main/res/layout/view_search_bar.xml
+++ b/app/src/main/res/layout/view_search_bar.xml
@@ -33,7 +33,7 @@
         android:layout_width="@dimen/lb_search_bar_items_width"
         android:layout_height="@dimen/lb_search_bar_items_height"
         android:layout_centerVertical="true"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="55dp"
         android:layout_marginTop="@dimen/lb_search_bar_inner_margin_top"
         android:layout_marginBottom="@dimen/lb_search_bar_inner_margin_bottom"
         android:background="@drawable/lb_in_app_search_bg"
@@ -81,9 +81,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/lb_search_bar_items"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="52dp"
+
         android:layout_marginTop="48dp"
         android:orientation="horizontal" >
+        <TextView
+            android:text="数据源："
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
 
     </RadioGroup>
 
