--- a/easy-crasher/src/main/res/layout/activity_crash.xml
+++ b/easy-crasher/src/main/res/layout/activity_crash.xml
@@ -2,6 +2,7 @@
 <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="16dp"
     android:background="@android:color/white">
 
     <LinearLayout
@@ -20,14 +21,17 @@
 
 
         <TextView
+            android:textColor="@android:color/black"
             android:textIsSelectable="true"
             android:id="@+id/tv_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
         <TextView
+            android:textColor="@android:color/black"
             android:textIsSelectable="true"
             android:id="@+id/tv_msg"
+            android:text="fsdfsdfsdffsdfs"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
